accessibility: Increase contrast of search label. Issue: #33

--- a/toy_tribe/static/css/style.css
+++ b/toy_tribe/static/css/style.css
@@ -1180,6 +1180,10 @@ main {
     width: 95%;
 }
 
+#search-label {
+    color : black !important;
+}
+
 /* Toys search bar */
 .toys-search {
     margin-top: 20px !important;
